# otl-lkv373a-tools

./: .gitignore  Makefile  annotate-registers  call-graph  cgi-upgrade-encoder  crack-crc32.cpp  find-blue-pills.py  find-lkv373a-tty  find-vserprog  make-tool-chain.sh  monitor-tty  openglamo  reset-lkv373a  smedia-dump.py  smedia-pack.py  tabulate-test-startup.py  test-startup.py  tristate-vserprogs  usb-spi-tool
assembler/: __init__.py  instructions.py
experiments/: __init__.py
experiments/dpu/: smaz.py
it9070-hello-world/: CMakeLists.txt
it9070-hello-world/src/: default.lds  main.c  startup.S
lkv373a/: __init__.py  cgi.py  util.py  vserprog.py
or1k-hello-world/: Makefile  main.c  overlay_patch.py  startup.s  u2_patch.ld
smaz-fuzz/: cmp-results.py  fuzz-record-lengths.py  make-python-blob.py  test-df.py  test-smaz-decode.py
smazdec/: CMakeLists.txt  smazdec.c
smedia/: __init__.py  smaz.py
